--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Hero from '../components/Hero.astro';
 ---
 
 <Layout title="Benhatsdrauf">
-	<main class="m-auto max-w-prose p-10">
-		<h1 class="font-bold text-5xl">Hi! I'm <span class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-500 to-cyan-600">Ben</span>,</h1>
-		<h1 class="font-bold text-5xl"><span class="text-gradient">Frontend Developer</span></h1>
+	<main>
+		<Hero/>
 	</main>
 </Layout>
 
-<style>
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-</style>
