--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,17 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero.astro';
+import About from '../components/About.astro';
+import Projects from '../components/Projects.astro';
+import Contact from '../components/Contact.astro';
 ---
 
 <Layout title="Benhatsdrauf">
 	<main>
 		<Hero/>
+		<About/>
+		<Projects/>
+		<Contact/>
 	</main>
 </Layout>
 
