--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,7 +1,11 @@
 ---
-
 ---
 
-<section class="m-auto max-w-prose p-10 min-h-screen">
-    <h1 class="font-bold text-5xl">This is the <span class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-500 to-cyan-600">Contact</span> section</h1>
+<section class="m-auto max-w-prose p-10 min-h-screen snap-start">
+  <h1 class="font-bold text-5xl">
+    This is the <span
+      class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-500 to-cyan-600"
+      >Contact</span
+    > section
+  </h1>
 </section>
