--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,16 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
+import Hero from "../components/Hero.astro";
+import About from "../components/About.astro";
+import Projects from "../components/Projects.astro";
+import Contact from "../components/Contact.astro";
 ---
 
 <Layout title="Benhatsdrauf">
-	<main class="m-auto max-w-prose p-10">
-		<h1 class="font-bold text-5xl">Hi! I'm <span class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-cyan-500">Ben</span>,</h1>
-		<h1 class="font-bold text-5xl"><span class="text-gradient">Frontend Developer</span></h1>
-	</main>
+  <main class="scroll-smooth snap-mandatory snap-y h-screen overflow-scroll">
+    <Hero />
+    <About />
+    <Projects />
+    <Contact />
+  </main>
 </Layout>
-
-<style>
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-</style>
