--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,8 +1,10 @@
 ---
 ---
 
-<section class="m-auto max-w-prose p-10 min-h-screen snap-start">
-  <h1 class="font-bold text-5xl">
+<section
+  class="m-auto max-w-prose p-10 min-h-screen snap-start font-bold text-2xl sm:text-5xl"
+>
+  <h1>
     This is the <span
       class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-500 to-cyan-600"
       >Contact</span
