--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,14 +1,29 @@
 ---
 ---
 
-<section class="m-auto max-w-prose p-10 min-h-screen snap-start">
-  <h1 class="font-bold text-5xl">
-    Hi! I'm <span
-      class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-500 to-cyan-600"
-      >Ben</span
-    >,
-  </h1>
-  <h1 class="font-bold text-5xl">
-    <span class="text-gradient">Frontend Developer</span>
-  </h1>
+<section
+  class="m-auto p-10 min-h-screen snap-start font-bold text-2xl sm:text-5xl"
+>
+  <div
+    class="flex flex-col justify-center gap-16 pt-10 sm:flex-row sm:gap-40 sm:pt-20"
+  >
+    <div class="flex-col self-center">
+      <h1>
+        Hi! I'm <span
+          class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-500 to-cyan-600"
+          >Ben</span
+        >,
+      </h1>
+      <h1>
+        <span class="text-gradient">Frontend Developer</span>
+      </h1>
+    </div>
+    <div>
+      <img src="../../public/undraw_coding.svg" class="h-44" />
+    </div>
+    <div class="self-center flex flex-col gap-4 sm:gap-8 sm:hidden">
+      <span class="text-sm sm:text-base">Scroll</span>
+      <span class="animate-bounce self-center">&darr;</span>
+    </div>
+  </div>
 </section>
