fix path to svg

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,7 +19,7 @@
       </h1>
     </div>
     <div>
-      <img src="../../public/undraw_coding.svg" class="h-44" />
+      <img src="/undraw_coding.svg" class="h-44" />
     </div>
     <div class="self-center flex flex-col gap-4 sm:gap-8 sm:hidden">
       <span class="text-sm sm:text-base">Scroll</span>
